--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,20 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
+    compile name: 'repast'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 mainClassName = "labyrinth.Hello"
+
+task startRepast(type:Exec) {
+    workingDir 'libs'
+
+    commandLine 'java', '-jar', 'repast.jar'
+}
