--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group 'feup'
 version '0.1-SNAPSHOT'
 
-apply plugin: 'application'
+apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
@@ -16,8 +16,6 @@ dependencies {
     compile name: 'repast'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
-
-mainClassName = "labyrinth.Hello"
 
 task startRepast(type:Exec) {
     workingDir 'libs'
