--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ repositories {
 }
 
 dependencies {
+    compile name: 'jade'
     compile name: 'repast'
+    compile name: 'SAJaS'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
