--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 group 'feup'
 version '0.1-SNAPSHOT'
 
-apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
+
+mainClassName = "labyrinth.Repast3ServiceConsumerProviderLauncher"
 
 repositories {
     mavenCentral()
@@ -17,10 +19,4 @@ dependencies {
     compile name: 'repast'
     compile name: 'SAJaS'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-task startRepast(type:Exec) {
-    workingDir 'libs'
-
-    commandLine 'java', '-jar', 'repast.jar'
 }
