--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,10 @@ repositories {
 }
 
 dependencies {
-    compile name: 'jade'
-    compile name: 'repast'
-    compile name: 'SAJaS'
+    implementation name: 'jade'
+    implementation name: 'repast'
+    implementation name: 'SAJaS'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
