--- a/configurations/live-demo-3.yml
+++ b/configurations/live-demo-3.yml
@@ -1,8 +1,10 @@
-batchMode: true
+batchMode: false
 mazeHeight: 30
 mazeLength: 30
+seed: 1
 numForwardAgents: 0
 numBacktrackAgents: 0
 numRandomAgents: 0
 numNegotiatingAgents: 0
-numSwarmAgents: 6
+numSwarmAgents: 10
+slownessRate: 5
