--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs/lib')
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.7'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.9.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
