reimplement num steps to exit metric for agent

--- a/configurations/test.yml
+++ b/configurations/test.yml
@@ -2,11 +2,11 @@
 batchMode: true
 mazeHeight: 20
 mazeLength: 20
-seed: 1
-numForwardAgents: 2
-numBacktrackAgents: 2
-numRandomAgents: 2
-numNegotiatingAgents: 2
+seed: 15
+numForwardAgents: 1
+numBacktrackAgents: 1
+numRandomAgents: 0
+numNegotiatingAgents: 0
 numSwarmAgents: 0
-statisticsPath: "data.csv"
-#slownessRate: 5
+statisticsPath: "metrics/data2.csv"
+slownessRate: 5
