--- a/configurations/experiment-1.yml
+++ b/configurations/experiment-1.yml
@@ -8,4 +8,5 @@ numBacktrackAgents: 100
 numRandomAgents: 100
 numNegotiatingAgents: 100
 numSwarmAgents: 0
+statisticsPath: "metrics/live-demo-3.csv"
 #slownessRate: 5
