add stack size configuration
- 512MiB on gradle run
- Readme instructions

--- a/build.gradle
+++ b/build.gradle
@@ -35,3 +35,6 @@ jar {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+
+applicationDefaultJvmArgs = ["-Xss512m"]
+
